implemented merge_detection_sets python binding

--- a/python/kwiver/vital/algo/CMakeLists.txt
+++ b/python/kwiver/vital/algo/CMakeLists.txt
@@ -43,6 +43,7 @@ kwiver_add_python_library(algorithm
   match_descriptor_sets.h
   match_features.h
   merge_images.h
+  merge_detection_sets.h
   optimize_cameras.h
   read_object_track_set.h
   read_track_descriptor_set.h
@@ -96,6 +97,7 @@ kwiver_add_python_library(algorithm
   match_descriptor_sets.cxx
   match_features.cxx
   merge_images.cxx
+  merge_detection_sets.cxx
   optimize_cameras.cxx
   read_object_track_set.cxx
   read_track_descriptor_set.cxx
@@ -149,6 +151,7 @@ kwiver_add_python_library(algorithm
   trampoline/match_descriptor_sets_trampoline.txx
   trampoline/match_features_trampoline.txx
   trampoline/merge_images_trampoline.txx
+  trampoline/merge_detection_sets_trampoline.txx
   trampoline/optimize_cameras_trampoline.txx
   trampoline/read_object_track_set_trampoline.txx
   trampoline/read_track_descriptor_set_trampoline.txx
