--- a/vital/algo/CMakeLists.txt
+++ b/vital/algo/CMakeLists.txt
@@ -51,6 +51,7 @@ set( public_headers
   match_descriptor_sets.h
   match_features.h
   merge_images.h
+  merge_detection_sets.h
   optimize_cameras.h
   read_object_track_set.h
   read_track_descriptor_set.h
@@ -112,6 +113,7 @@ set( sources
   match_descriptor_sets.cxx
   match_features.cxx
   merge_images.cxx
+  merge_detection_sets.cxx
   optimize_cameras.cxx
   read_object_track_set.cxx
   read_track_descriptor_set.cxx
